--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,10 @@
     <dependencies>
         <!-- JUnit 5 BOM (Bill of Materials) -->
         <dependency>
-            <groupId>org.junit</groupId>
-            <artifactId>junit-bom</artifactId>
-            <version>5.8.0</version>
-            <scope>import</scope>
-            <type>pom</type>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.0</version>
+            <scope>test</scope>
         </dependency>
 
         <!-- JUnit 5 API -->
